--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,47 @@
-.logo-banner {
+
+.banner {
+    background-image: url(../img/pattern.png);
     background-color: #4ea0ff;
-    margin-top: 0px;
-    padding-top: 0px;
-    border-top: 0px;
-    background-image: url(img/pattern.png);
-   
+    padding-right: 1080px;
+    padding-bottom: 10px;
+    padding-top: 15px;  
+    width: 180px;
+    background-size: 320px;
 }
 
-
 .titolo1 {
-    font-size: 25px
+    font-size: 20px;
+    height: 100px;
+
+}
+  
+
+
+
+* {
+    margin-top: 0px;
+    margin-left: 0px;
+}
+.sottotitolo{
+    font-size: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+}
+
+.nomeblu {
+    color:#20a9e5;
+}
+
+.grigio{
+    color:#a4a4a4;
+}
+
+.data-sottotitolo {
+ font-size: 10px;   
+margin-top: 0px;
+}
+
+.titolo-e-sottotitolo {
+    margin-left: 5px;
 }
