--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 .banner {
     background-image: url(../img/pattern.png);
     background-color: #4ea0ff;
-    padding-right: 1080px;
+    padding-right: 1920px;
     padding-bottom: 10px;
     padding-top: 15px;  
     width: 180px;
@@ -10,9 +10,11 @@
 }
 
 .titolo1 {
-    font-size: 20px;
-    height: 100px;
-
+    font-size: 30px;
+    height: auto;
+    margin-bottom: 1px;
+    padding-bottom: 0px;
+    border-bottom: 0px;
 }
   
 
@@ -44,4 +46,15 @@ margin-top: 0px;
 
 .titolo-e-sottotitolo {
     margin-left: 5px;
+}
+
+.descrizioni-foto {
+    font-size: 10px;
+}
+
+.paragrafi-foto {
+    margin: 0px;
+}
+.primo-lorem {
+    margin-top: 15px;
 }
